Buttons in correct place, with correct spacing

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -90,6 +90,7 @@ a {
 }
 a:hover {
   color: #e73a3c;
+  text-decoration: none;
 }
 
 /** For the icons **/
@@ -148,10 +149,6 @@ i {
     padding-bottom: 10%;
     font-size: 4em;
     color:black;
-}
-
-#sociallinks{
-  padding-bottom: 20px;
 }
 
 #topleftlogo {
@@ -376,6 +373,9 @@ i {
     float: right;
     margin-top: 0;
 }
+.sociallinks{
+  padding-bottom: 30px;
+}
 
 /** Highlight
 /*** Works on common browsers ***/
@@ -461,7 +461,6 @@ p.copyright {
     -moz-transition: all 300ms ease-out;
     -o-transition: all 300ms ease-out;
     -ms-transition: all 300ms ease-out;
-    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 1.5);
 }
 
 .img-circle {
@@ -496,7 +495,24 @@ p.copyright {
   max-width: 250px;
 }
 
+/** Hover animation **/
+/* Grow */
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
 
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.08);
+}
 /** staff page css
 .box {
   cursor: pointer;
